--- a/info.env
+++ b/info.env
@@ -1,13 +1,8 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=
-DB_NAME=dbtechnoweb
-
-
-# Secret pour signer les JWT
-JWT_SECRET=secret
-
-# Secret pour sécuriser les sessions
-SESSION_SECRET=secret
-
+DB_HOST=larbreenzkremima.mysql.db
+DB_USER=larbreenzkremima
+DB_PASSWORD=ton_mot_de_passe_OVH
+DB_NAME=larbreenzkremima
 PORT=3000
+SESSION_SECRET=secret-session
+JWT_SECRET=jwt-secret-key
+NODE_ENV=production
